Fix up menu CSS to wrap better

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,16 +17,16 @@ li.nav-messages {
 	padding-bottom: 14px;
 }
 
-
-
-.navbar-expand {
-	flex-flow: row wrap;
+.navbar-nav {
+	flex-wrap: wrap;
 }
 
 .navbar {
 	box-shadow: 0px 10px 20px #CCC;
 	margin-bottom: 1.2em;
+	flex-wrap: wrap;
 }
+
 
 .error { color: #A00; }
 .warning { color: #DC9200; }
